# sift

./: LICENSE  README.md  pyproject.toml  setup_sift.sh
sift/: __init__.py  cli.py  daemon.py  embedder.py  monitor.py  ocr.py  search.py  store.py  utils.py
sift/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
tests/: test_core.py
ui/: app.py
